# GoNext

./: .dockerignore  .editorconfig  .env.example  .gitignore  .golangci.yml  .markdownlint.jsonc  .tool-versions  BACKLOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.dev.yml  docker-compose.override.example.yml  docker-compose.yml  go.work  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.well-known/: security.txt
adr/: 0000-template.md  0001-licensing.md  0002-cla-requirement.md  0002-dco-requirement.md  0003-uuid-v7-primary-keys.md  0004-postgres-primary-store.md  0005-wasm-plugin-runtime.md  0006-monorepo-go-pnpm-workspaces.md  0007-separate-next-apps-public-admin.md  0008-json-block-tree-storage.md  0009-lexical-rich-text.md  0010-asynq-background-jobs.md  0011-cache-tag-invalidation.md  0012-plugin-capability-abi.md  README.md
docs/: 00-architecture-overview.md  01-core-cms.md  02-plugin-system.md  03-theme-system.md  04-block-editor.md  04-seo-plugin-tutorial.md  05-admin-api.md  06-auth-permissions.md  07-media-performance.md  08-migration-compat.md  09-deployment-ops.md  10-observability.md  11-testing-ci.md  12-jobs-cron.md  13-security-baseline.md  15-security-policy.md  16-bug-bounty.md  17-environment.md  18-local-development.md  19-e2e-testing.md  20-troubleshooting.md  README.md
examples/plugins/sdk-rust-hello/: Cargo.toml  Makefile  README.md  manifest.json
examples/plugins/sdk-rust-hello/src/: lib.rs
(+1329 files in other folders)
